--- a/src/components/contactform.astro
+++ b/src/components/contactform.astro
@@ -16,20 +16,20 @@ import Button from "./ui/button.astro";
   <div class="mb-5">
     <input
       type="text"
-      placeholder="Full Name"
+      placeholder="Tu nombre"
       required
       class="w-full px-4 py-3 border-2 placeholder:text-gray-800 rounded-md outline-none focus:ring-4 border-gray-300 focus:border-gray-600 ring-gray-100"
       name="name"
     />
     <div class="empty-feedback invalid-feedback text-red-400 text-sm mt-1">
-      Please provide your full name.
+      Porfavor coloca tu nombre completo.
     </div>
   </div>
   <div class="mb-5">
-    <label for="email_address" class="sr-only">Email Address</label><input
+    <label for="email_address" class="sr-only">Direccion de correo</label><input
       id="email_address"
       type="email"
-      placeholder="Email Address"
+      placeholder="Direccion de correo"
       name="email"
       required
       class="w-full px-4 py-3 border-2 placeholder:text-gray-800 rounded-md outline-none focus:ring-4 border-gray-300 focus:border-gray-600 ring-gray-100"
@@ -45,14 +45,14 @@ import Button from "./ui/button.astro";
     <textarea
       name="message"
       required
-      placeholder="Your Message"
+      placeholder="Pon aqui tu mensaje"
       class="w-full px-4 py-3 border-2 placeholder:text-gray-800 rounded-md outline-none h-36 focus:ring-4 border-gray-300 focus:border-gray-600 ring-gray-100"
     ></textarea>
     <div class="empty-feedback invalid-feedback text-red-400 text-sm mt-1">
-      Please enter your message.
+      Pon aqui tu mensaje.
     </div>
   </div>
-  <Button type="submit" size="lg" block>Send Message</Button>
+  <Button type="submit" size="lg" block>Enviar mensaje</Button>
   <div id="result" class="mt-3 text-center"></div>
 </form>
 
