--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -4,51 +4,33 @@ import { Icon } from "astro-icon";
 
 const features = [
   {
-    title: "Bring Your Own Framework",
+    title: "Escoge tus platos preferidos",
     description:
-      "Build your site using React, Svelte, Vue, Preact, web components, or just plain ol' HTML + JavaScript.",
+      "En NutriVeggie tenemos una gran variedad de platos veganos listos para ti.",
     icon: "bx:bxs-briefcase",
   },
   {
-    title: "100% Static HTML, No JS",
+    title: "100% alimentos saludables",
     description:
-      "Astro renders your entire page to static HTML, removing all JavaScript from your final build by default.",
+      "Nos preocupamos por tu salud porlo que todos nuestros insumos son totalmente saludables",
     icon: "bx:bxs-window-alt",
   },
   {
-    title: "On-Demand Components",
+    title: "Planes y guias para ti ",
     description:
-      "Need some JS? Astro can automatically hydrate interactive components when they become visible on the page.  ",
+      "Sabemos que llevar una dieta vegana puede ser complicado por eso ademas de ofrecerte la mejor comida tambien te enseñamos",
     icon: "bx:bxs-data",
   },
-  {
-    title: "Broad Integration",
-    description:
-      "Astro supports TypeScript, Scoped CSS, CSS Modules, Sass, Tailwind, Markdown, MDX, and any other npm packages.",
-    icon: "bx:bxs-bot",
-  },
-  {
-    title: "SEO Enabled",
-    description:
-      "Automatic sitemaps, RSS feeds, pagination and collections take the pain out of SEO and syndication. It just works!",
-    icon: "bx:bxs-file-find",
-  },
-  {
-    title: "Community",
-    description:
-      "Astro is an open source project powered by hundreds of contributors making thousands of individual contributions.",
-    icon: "bx:bxs-user",
-  },
+
 ];
 ---
 
 <div class="mt-16 md:mt-0">
   <h2 class="text-4xl lg:text-5xl font-bold lg:tracking-tight">
-    Everything you need to start a website
+    Todo lo que necesitas para llevar un estilo de vida saludable, comodo y responsable
   </h2>
   <p class="text-lg mt-4 text-slate-600">
-    Astro comes batteries included. It takes the best parts of state-of-the-art
-    tools and adds its own innovations.
+    La comida vegetariana se considera parte del futuro alimentario global debido a su sostenibilidad ambiental, beneficios para la salud, preocupaciones éticas, innovación alimentaria y cambios culturales.
   </p>
 </div>
 
