--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -6,7 +6,7 @@ import { Astronav, MenuItems, MenuIcon } from "astro-navbar";
 
 const menuitems = [
   {
-    title: "Features",
+    title: "Caracteristicas",
     path: "#",
     children: [
       { title: "Action", path: "/" },
@@ -16,11 +16,11 @@ const menuitems = [
     ],
   },
   {
-    title: "Pricing",
+    title: "Precios",
     path: "/pricing",
   },
   {
-    title: "About",
+    title: "Acerca de",
     path: "/about",
   },
   {
@@ -28,7 +28,7 @@ const menuitems = [
     path: "/blog",
   },
   {
-    title: "Contact",
+    title: "Contacto",
     path: "/contact",
   },
 ];
