acutalizacion redes sociales y mvpt

--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -41,12 +41,23 @@ import { Icon } from "astro-icon";
         size="lg"
         style="outline"
         rel="noopener"
-        href="https://github.com/surjithctly/astroship"
+        href="https://www.facebook.com/profile.php?id=61551784217587&is_tour_completed=true"
         class="flex gap-1 items-center justify-center"
         target="_blank">
-        <Icon class="text-black w-4 h-4" name="bx:bxl-github" />
-         Repositorio
+        <Icon class="text-blue-600 w-6 h-6" name="bx:bxl-facebook" />
+         NutriVeggie
       </Link>
+      <Link
+        size="lg"
+        style="outline"
+        rel="noopener"
+        href="https://www.instagram.com/nutriveggie8/"
+        class="flex gap-1 items-center justify-center"
+        target="_blank">
+        <Icon class="text-pink-500 w-6 h-6" name="bx:bxl-instagram" />
+         Siguenos
+      </Link>
+      
     </div>
   </div>
 </main>
