--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -34,6 +34,12 @@ const features = [
   </p>
 </div>
 
+<div class="video-container" style="display: flex; justify-content: center; align-items: center; height: 600px; padding-top: 40px;">
+  <iframe width="1000" height="600" src="https://www.youtube.com/embed/D7riZgbeiWI?si=FzUfJICILjc0LIgR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</div>
+
+
+
 <div class="grid sm:grid-cols-2 md:grid-cols-3 mt-16 gap-16">
   {
     features.map((item) => (
