--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -29,7 +29,7 @@ import { Icon } from "astro-icon";
     <div class="mt-6 flex flex-col sm:flex-row gap-3">
       <Link
         href="#"
-        href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQj02Lahf6fbLNqIhWdV7Eip90pwEjK5Qy7CQ&usqp=CAU"
+        href="https://drive.google.com/file/d/12AWxlRFF5KbJHE_sbuwM1kh5vUTDG79p/view?usp=drive_link"
         target="_blank"
         class="flex gap-1 items-center justify-center"
         rel="noopener">
